--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     font-family: "Poppins", "Segoe UI", sans-serif;
     background: var(--bg);
     color: var(--text);
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
     padding: 20px;
     box-sizing: border-box;
@@ -105,13 +103,6 @@
     color: var(--muted);
   }
 
-  /* Main layout: sidebar + catalog */
-  #main {
-    display: flex;
-    flex: 1;
-    overflow: hidden;
-  }
-
   /* 🩷 Idol buttons panel (left) */
   #idolButtons {
     position: fixed;
@@ -128,12 +119,12 @@
     border-right: 1px solid #333;
     z-index: 999;
   }
-  
+
   /* 🧭 Category panel (next to idols) */
   #categoryPanel {
     position: fixed;
     top: 0;
-    left: 200px; /* will shift if idols panel changes width dynamically */
+    left: 200px;
     width: 160px;
     height: 100%;
     padding: 10px;
@@ -145,13 +136,12 @@
     border-right: 1px solid #333;
     z-index: 998;
   }
-  
+
   /* Hide scrollbars */
   #idolButtons::-webkit-scrollbar,
   #categoryPanel::-webkit-scrollbar { display: none; }
   #idolButtons { -ms-overflow-style: none; scrollbar-width: none; }
   #categoryPanel { -ms-overflow-style: none; scrollbar-width: none; }
-
 
   /* Catalog panel */
   #catalogPanel {
@@ -159,11 +149,10 @@
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
     gap: 12px;
     padding: 10px;
-    padding-left: 220px;  /* width of idolButtons + some space */
-    padding-right: 180px; /* width of categoryPanel + some space */
+    padding-left: 220px;  /* space for idolButtons */
+    padding-right: 180px; /* space for categoryPanel */
     overflow-y: auto;
   }
-
 
   .catalog-thumb {
     width: 100%;
@@ -236,6 +225,11 @@
   <div id="suggestions" hidden></div>
 </div>
 
+<!-- Fixed panels -->
+<div id="idolButtons"></div>
+<div id="categoryPanel"></div>
+
+<!-- Catalog -->
 <div id="catalogPanel"></div>
 
 <!-- Overlay -->
