--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     background: var(--bg);
     color: var(--text);
     min-height: 100vh;
-    padding: 20px;
     box-sizing: border-box;
   }
 
@@ -35,18 +34,23 @@
     letter-spacing: 1px;
   }
 
+  /* Search bar above panels */
   .search-container {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 360px; /* combined width of idol + category panels */
     display: flex;
     align-items: center;
     gap: 8px;
-    justify-content: center;
-    margin-bottom: 20px;
-    width: 100%;
+    padding: 10px;
+    background: #111;
+    border-bottom: 1px solid #333;
+    z-index: 1001;
   }
 
   #searchInput {
-    flex: 0 0 340px;
+    flex: 1;
     padding: 10px 14px;
     border-radius: 8px;
     border: 1px solid #333;
@@ -85,7 +89,7 @@
     border-radius: 8px;
     max-height: 180px;
     overflow-y: auto;
-    z-index: 10;
+    z-index: 1002;
   }
 
   .suggestion {
@@ -103,13 +107,13 @@
     color: var(--muted);
   }
 
-  /* 🩷 Idol Buttons Panel (left) */
+  /* Idol Buttons Panel (left) */
   #idolButtons {
     position: fixed;
-    top: 0;
+    top: 50px; /* below search bar (search bar height ~50px) */
     left: 0;
-    width: 200px;           /* always open */
-    height: 100%;
+    width: 200px;
+    height: calc(100% - 50px);
     padding: 10px;
     overflow-y: auto;
     display: flex;
@@ -120,14 +124,14 @@
     z-index: 999;
     box-sizing: border-box;
   }
-  
-  /* 🧭 Category Panel (next to idols) */
+
+  /* Category Panel (next to idols) */
   #categoryPanel {
     position: fixed;
-    top: 0;
-    left: 200px;            /* immediately right of idol buttons */
-    width: 160px;           /* always open */
-    height: 100%;
+    top: 50px; /* below search bar */
+    left: 200px;
+    width: 160px;
+    height: calc(100% - 50px);
     padding: 10px;
     overflow-y: auto;
     display: flex;
@@ -139,7 +143,6 @@
     box-sizing: border-box;
   }
 
-
   /* Hide scrollbars */
   #idolButtons::-webkit-scrollbar,
   #categoryPanel::-webkit-scrollbar { display: none; }
@@ -150,7 +153,7 @@
   #catalogPanel {
     position: fixed;
     top: 0;
-    left: 360px;            /* 200 + 160 = 360px offset */
+    left: 360px;
     right: 0;
     bottom: 0;
     padding: 10px;
@@ -160,7 +163,6 @@
     overflow-y: auto;
     box-sizing: border-box;
   }
-
 
   .catalog-thumb {
     width: 100%;
@@ -226,6 +228,7 @@
 </head>
 <body>
 
+<!-- Search bar above panels -->
 <div class="search-container">
   <input id="searchInput" placeholder="Search folder..." />
   <button id="searchBtn">🔍 Search</button>
