--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     width: 200px;
     height: calc(100% - 50px);
     padding: 10px;
+    padding-bottom: 5px;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
