--- a/index.html
+++ b/index.html
@@ -1,4 +1,253 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>K-pop Idol Gallery</title>
+<style>
+  :root {
+    --bg: radial-gradient(circle at top, #141414 0%, #0a0a0a 100%);
+    --card: #1b1b1b;
+    --accent: #ff7bcb;
+    --accent-hover: #ff94d8;
+    --text: #f4f4f4;
+    --muted: #aaa;
+  }
+
+  body {
+    margin: 0;
+    font-family: "Poppins", "Segoe UI", sans-serif;
+    background: var(--bg);
+    color: var(--text);
+    min-height: 100vh;
+    box-sizing: border-box;
+  }
+
+  h1 {
+    font-size: 28px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 20px;
+    background: linear-gradient(90deg, var(--accent), #b57aff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: 1px;
+  }
+
+  /* Search bar above panels */
+  .search-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 340px; /* combined width of idol + category panels */
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 10px;
+    background: #111;
+    border-bottom: 1px solid #333;
+    z-index: 1001;
+  }
+
+  #searchInput {
+    flex: 1;
+    padding: 10px 14px;
+    border-radius: 8px;
+    border: 1px solid #333;
+    background: var(--card);
+    color: var(--text);
+    font-size: 14px;
+    outline: none;
+  }
+
+  #searchInput:focus { border-color: var(--accent); }
+
+  #searchBtn {
+    background: var(--card);
+    border: 1px solid #333;
+    color: var(--text);
+    padding: 10px 14px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    font-size: 14px;
+  }
+
+  #searchBtn:hover {
+    background: #272727;
+    border-color: var(--accent);
+    color: var(--accent-hover);
+  }
+
+  #suggestions {
+    position: absolute;
+    top: 44px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #1a1a1a;
+    border: 1px solid #333;
+    border-radius: 8px;
+    max-height: 180px;
+    overflow-y: auto;
+    z-index: 1002;
+  }
+
+  .suggestion {
+    padding: 8px 12px;
+    cursor: pointer;
+  }
+
+  .suggestion:hover {
+    background: #272727;
+    color: var(--accent);
+  }
+
+  .no-result {
+    padding: 8px 12px;
+    color: var(--muted);
+  }
+
+  /* Idol Buttons Panel (left) */
+  #idolButtons {
+    position: fixed;
+    top: 60px; /* below search bar (search bar height ~50px) */
+    left: 0;
+    width: 200px;
+    height: calc(100% - 50px);
+    padding: 10px;
+    padding-bottom: 20px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    background: #111;
+    border-right: 1px solid #333;
+    z-index: 999;
+    box-sizing: border-box;
+  }
+
+  /* Category Panel (next to idols) */
+  #categoryPanel {
+    position: fixed;
+    top: 60px; /* below search bar */
+    left: 200px;
+    width: 160px;
+    height: calc(100% - 50px);
+    padding: 10px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    background: #111;
+    border-right: 1px solid #333;
+    z-index: 998;
+    box-sizing: border-box;
+  }
+
+  /* Hide scrollbars */
+  #idolButtons::-webkit-scrollbar,
+  #categoryPanel::-webkit-scrollbar { display: none; }
+  #idolButtons { -ms-overflow-style: none; scrollbar-width: none; }
+  #categoryPanel { -ms-overflow-style: none; scrollbar-width: none; }
+
+  /* Catalog panel */
+  #catalogPanel {
+    position: fixed;
+    top: 0;
+    left: 360px;
+    right: 0;
+    bottom: 0;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    gap: 12px;
+    overflow-y: auto;
+    box-sizing: border-box;
+  }
+
+  .catalog-thumb {
+    width: 100%;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.2s, border-color 0.2s;
+    border: 1px solid #333;
+    object-fit: cover;
+  }
+
+  .catalog-thumb:hover {
+    transform: scale(1.05);
+    border-color: var(--accent);
+  }
+
+  /* Buttons */
+  .idol-btn, .category-btn {
+    background: var(--card);
+    border: 1px solid #333;
+    color: var(--text);
+    padding: 8px 10px;
+    border-radius: 8px;
+    font-size: 13px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    text-align: left;
+    white-space: nowrap;
+  }
+
+  .idol-btn:hover, .category-btn:hover {
+    background: #272727;
+    border-color: var(--accent);
+    color: var(--accent-hover);
+  }
+
+  .idol-btn.active, .category-btn.active {
+    background: #272727;
+    border-color: var(--accent);
+    color: var(--accent);
+  }
+
+  /* Overlay */
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0,0,0,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  #overlay img, #overlay video {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 12px;
+    object-fit: contain;
+  }
+</style>
+</head>
+<body>
+
+<!-- Search bar above panels -->
+<div class="search-container">
+  <input id="searchInput" placeholder="Search folder..." />
+  <button id="searchBtn">🔍 Search</button>
+  <div id="suggestions" hidden></div>
+</div>
+
+<!-- Fixed panels -->
+<div id="idolButtons"></div>
+<div id="categoryPanel"></div>
+
+<!-- Catalog -->
+<div id="catalogPanel"></div>
+
+<!-- Overlay -->
+<div id="overlay"></div>
+
 <script>
+// --- JS remains the same ---
 const MEDIA_URL = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links.txt";
 const MEDIA_URL_02 = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links_02.txt";
 
@@ -25,61 +274,15 @@ function parseCatalogText(text) {
     .sort((a,b)=>a.folder.localeCompare(b.folder));
 }
 
-// --- FILTERING LOGIC ---
-function applyFilters() {
-  filteredCatalog = catalog.filter(item => {
-    if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
-    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
-    return true;
-  });
+function getCurrentPool() { return filteredCatalog.length ? filteredCatalog : catalog; }
 
-  // Compute available idols and categories based on filteredCatalog
-  const availableIdols = [...new Set(filteredCatalog.map(it => it.folder))].sort();
-  const availableCategories = [...new Set(filteredCatalog.map(it => it.category).filter(Boolean))].sort();
-
-  renderIdolButtons(availableIdols);
-  renderCategoryButtons(availableCategories);
-  renderCatalogThumbnails();
-}
-
-function renderIdolButtons(list = null) {
-  idolButtonsEl.innerHTML = "";
-  const names = list || [...new Set(catalog.map(it => it.folder))];
-  names.forEach(name => {
-    const btn = document.createElement("button");
-    btn.className = "idol-btn";
-    btn.textContent = name;
-    if (currentIdolFilter === name) btn.classList.add("active");
-    btn.onclick = () => {
-      currentIdolFilter = currentIdolFilter === name ? null : name;
-      applyFilters();
-    };
-    idolButtonsEl.appendChild(btn);
-  });
-}
-
-function renderCategoryButtons(list = null) {
-  categoryPanel.innerHTML = "";
-  const cats = list || [...new Set(catalog.map(it => it.category).filter(Boolean))];
-  cats.forEach(cat => {
-    const btn = document.createElement("button");
-    btn.className = "category-btn";
-    btn.textContent = cat;
-    if (currentCategoryFilter === cat) btn.classList.add("active");
-    btn.onclick = () => {
-      currentCategoryFilter = currentCategoryFilter === cat ? null : cat;
-      applyFilters();
-    };
-    categoryPanel.appendChild(btn);
-  });
-}
-
-// --- SEARCH ---
 function handleSearch(input) {
   const term = input.trim().toLowerCase();
   if (!term) {
     filteredCatalog = catalog.slice();
-    applyFilters();
+    renderIdolButtons([...new Set(catalog.map(it=>it.folder))]);
+    renderCategoryButtons([...new Set(catalog.map(it=>it.category).filter(Boolean))]);
+    renderCatalogThumbnails();
     suggestionsEl.hidden = true;
     return;
   }
@@ -107,15 +310,26 @@ function showSuggestions(matches, term) {
 }
 
 function selectFolder(folder) {
-  filteredCatalog = catalog.filter(it => it.folder.toLowerCase() === folder.toLowerCase());
-  searchInput.value = folder;
+  const match = folder.trim().toLowerCase();
+  filteredCatalog = catalog.filter(it => it.folder.toLowerCase() === match);
+  if (!filteredCatalog.length) filteredCatalog = catalog.filter(it => it.folder.toLowerCase().includes(match));
   suggestionsEl.hidden = true;
+  searchInput.value = folder;
   applyFilters();
+  renderCatalogThumbnails();
 }
 
-// --- CATALOG THUMBNAILS & OVERLAY ---
+function applyFilters() {
+  filteredCatalog = catalog.filter(item => {
+    if (currentIdolFilter && item.folder !== currentIdolFilter) return false;
+    if (currentCategoryFilter && item.category !== currentCategoryFilter) return false;
+    return true;
+  });
+  renderCatalogThumbnails();
+}
+
 function renderCatalogThumbnails() {
-  const pool = filteredCatalog.length ? filteredCatalog : catalog;
+  const pool = getCurrentPool();
   catalogPanel.innerHTML = "";
   pool.forEach(item => {
     const img = document.createElement("img");
@@ -160,16 +374,67 @@ overlay.addEventListener("click", () => {
   overlayVisible = false;
 });
 
-// --- EVENT LISTENERS ---
+function renderIdolButtons(list = null) {
+  idolButtonsEl.innerHTML = "";
+  const names = list || [...new Set(filteredCatalog.map(it => it.folder))];
+  names.forEach(name => {
+    const btn = document.createElement("button");
+    btn.className = "idol-btn";
+    btn.textContent = name;
+    btn.onclick = () => toggleCatalogIdol(name, btn);
+    idolButtonsEl.appendChild(btn);
+  });
+}
+
+function toggleCatalogIdol(folderName, btn) {
+  if (currentIdolFilter === folderName) {
+    currentIdolFilter = null;
+    btn.classList.remove("active");
+    applyFilters();
+    renderIdolButtons([...new Set(catalog.map(it=>it.folder))]);
+    return;
+  }
+  currentIdolFilter = folderName;
+  [...idolButtonsEl.children].forEach(b => b.classList.remove("active"));
+  btn.classList.add("active");
+  applyFilters();
+}
+
+function renderCategoryButtons(list = categories) {
+  categoryPanel.innerHTML = "";
+  list.forEach(cat => {
+    const btn = document.createElement("button");
+    btn.className = "category-btn";
+    btn.textContent = cat;
+    if (currentCategoryFilter === cat) btn.classList.add("active");
+    btn.onclick = () => toggleCategoryFilter(cat, btn);
+    categoryPanel.appendChild(btn);
+  });
+}
+
+function toggleCategoryFilter(cat, btn) {
+  if (currentCategoryFilter === cat) {
+    currentCategoryFilter = null;
+    btn.classList.remove("active");
+    applyFilters();
+    renderCategoryButtons(categories);
+    return;
+  }
+  currentCategoryFilter = cat;
+  [...categoryPanel.children].forEach(b => b.classList.remove("active"));
+  btn.classList.add("active");
+  applyFilters();
+}
+
 searchBtn.addEventListener("click", () => handleSearch(searchInput.value));
 searchInput.addEventListener("input", () => handleSearch(searchInput.value));
+
 document.addEventListener("click", (e) => {
   if (!suggestionsEl.contains(e.target) && e.target !== searchInput) {
     suggestionsEl.hidden = true;
   }
 });
 
-// --- LOAD CATALOG ---
 async function loadCatalog() {
   const [res1, res2] = await Promise.all([fetch(MEDIA_URL), fetch(MEDIA_URL_02)]);
   const txt1 = await res1.text();
@@ -179,8 +444,12 @@ async function loadCatalog() {
   filteredCatalog = catalog.slice();
   categories = [...new Set(catalog.map(it => it.category).filter(Boolean))];
 
-  applyFilters();
+  renderIdolButtons([...new Set(catalog.map(it=>it.folder))]);
+  renderCategoryButtons(categories);
+  renderCatalogThumbnails();
 }
 
 loadCatalog();
 </script>
+</body>
+</html>
